[resolves #53] Add Windows shell scripts to the distributions